Trying to fix grid collapsing width issues.

--- a/public/app/styles/main.scss
+++ b/public/app/styles/main.scss
@@ -508,7 +508,7 @@ legend {
 
 }
 
-@media (min-width: 768px) {
+@media (min-width: 892px) {
     .navbar-brand {
         line-height: 12px;
     }
